@@ -572,10 +572,30 @@ $strPasswordHashing = 'Hašovací funkce pro heslo';
 $strPassword = 'Heslo';
 $strPasswordChanged = 'Heslo pro %s bylo úspěšně změněno.';
 $strPasswordNotSame = 'Hesla nejsou stejná!';
+$strPBXTDataFileGrowSizeDesc = 'Velikost nárůstu souborů se zpracovávanými daty (.xtd).';
+$strPBXTDataFileGrowSize = 'Velikost nárůstu souboru s daty';
+$strPBXTDataLogThresholdDesc = 'Nejvyšší velikost datového logu. Výchozí hodnota je 64MB. PBXT může vytvořit až 32000 datových logů, které jsou používany všemi tabulkami. Hodnota této proměnné tedy může být zvýšena, aby se zvýšilo celkové množství dat, které může být uloženo v databázi.';
+$strPBXTDataLogThreshold = 'Nejvyšší velikost datového logu';
+$strPBXTGarbageThresholdDesc = 'Procentuální podíl odpadu (garbage) v souboru datového logu předtím, než je soubor stlačen. Tato hodnota se může pohybovat mezi 1 a 99. Výchozí hodnota je 50.';
+$strPBXTGarbageThreshold = 'Největší velikost odpadu (garbage)';
+$strPBXTCheckpointFrequency = 'Četnost vytváření kontrolních bodů.';
+$strPBXTCheckpointFrequencyDesc = 'Množství dat zapsaných do logu transakcí předtím, než dojde k vytvoření kontrolního bodu. Výchozí velikost je 24MB.';
+$strPBXTIndexCacheSizeDesc = 'Toto je množství paměti alokované pro vyrovnávací paměť indexu. Výchozí velikost je 32MB. Zde alokovaná paměť se používá pouze pro vyrovnávací pamět stránek indexu.';
 $strPBXTIndexCacheSize = 'Velikost vyrovnávací paměti indexu';
+$strPBXTLogBufferSizeDesc = 'Velikost vyrovnávací paměti používané při zápisu datového logu. Výchozí velikost je 256MB. Vyrovnávací paměť se alokuje pro každé vlákno, ale pouze pokud toto vlákno potřebuje zapsat datový log.';
+$strPBXTLogBufferSize = 'Velikost vyrovnávací paměti logu';
+$strPBXTLogCacheSizeDesc = 'Množství paměti alokované pro vyrovnávací pamět transakčního logu, která se využívá pro dočasné ukládání dat transakčního logu. Výchozí velikost je 16MB.';
 $strPBXTLogCacheSize = 'Velikost vyrovnávací paměti logů';
+$strPBXTLogFileCountDesc = 'Toto je počet souborů transakčních logů (pbxt/system/xlog*.xt), které bude systém udržovat. Pokud množství logů překročí tuto hodnotu, budou staré soubory vymazány. Jinak jsou soubory přejmenovány a označeny vyšším číslem.';
+$strPBXTLogFileCount = 'Počet souborů s logy';
+$strPBXTLogFileThresholdDesc = 'Velikost, jaké musí transakční log dosáhnout předtím, než je vytvořen nový soubor. Východzí velikost je 16MB.';
 $strPBXTLogFileThreshold = 'Prahová hodnota logového souboru';
+$strPBXTRecordCacheSizeDesc = 'Toto je velikost vyrovnávací paměti pro záznamy používané k dočasnému ukládání dat tabulky. Výchozí velikost je 32MB. Tato pamět se používá k ukládání změn souborů zpracovávaných dat (.xtd) a ukazatelů řádků (.xtr).';
 $strPBXTRecordCacheSize = 'Velikost vyrovnávací paměti záznamu';
+$strPBXTRowFileGrowSizeDesc = 'Velikost nárůstu souboru ukazatelů řádku (.xtr).';
+$strPBXTRowFileGrowSize = 'Velikost nárůstu souboru řádků';
+$strPBXTTransactionBufferSizeDesc = 'Velikost vyrovnávací paměti logu souhrných transakcí (vyrovnávací paměť se vytváří dvakrát). Výchozí velikost je 1MB.';
+$strPBXTTransactionBufferSize = 'Velikost vyrovnávací paměti transakcí';
 $strPdfDbSchema = 'Schéma databáze „%s“ - Strana %s';
 $strPdfInvalidTblName = 'Tabulka „%s“ neexistuje!';
 $strPdfNoTables = 'žádné tabulky';
@@ -761,6 +781,47 @@ $strServerVersion = 'Verze MySQL';
 $strSessionStartupErrorGeneral = 'Vytváření sezení selhalo, prosím zkontrolujte chyby v logu PHP a/nebo webserveru a pečlivě nastavte podporu sezení v PHP.';
 $strSessionValue = 'Hodnota sezení';
 $strSetEnumVal = 'Pokud je sloupec typu „enum“ nebo „set“, zadávejte hodnoty v následujícím formátu: \'a\',\'b\',\'c\'...<br />Pokud potřebujete zadat zpětné lomítko („\“) nebo jednoduché uvozovky („\'“) mezi těmito hodnotami, napište před ně zpětné lomítko (příklad: \'\\\\xyz\' nebo \'a\\\'b\').';
+$strSetupAllowAnywhereRecoding_name = 'Povolit převod znakových sad';
+$strSetupAllowArbitraryServer_desc = 'Pokud je povoleno, může uživatel zadat libovolný MySQL server do přihlašovacího formuláře pro autorizaci pomocí cookie';
+$strSetupAllowArbitraryServerMsg = 'Tato [a@?page=form&amp;formset=features#tab_Security]volba[/a] by měla být zakázána, protože umožňuje útočníkům prolomit přihlašování k libovolnému MySQL serveru útokem hrobou silou. V případě nutnosti použijte [a@?page=form&amp;formset=features#tab_Security]seznam důvěryhodných proxy[/a]. Nicméně ochrana založená na kotrole IP adres, nemusí být spolehlivá, pokud Vaše IP adresa patří poskytovateli internetových služeb, ke kterému jsou připojeny tisíce uživatelů.';
+$strSetupAllowArbitraryServer_name = 'Povolit přihlášení k libovolnému MySQL serveru';
+$strSetupAllowUserDropDatabase_name = 'Zobrazit příkaz &quot;Zrušit databázi&quot; běžným uživatelům';
+$strSetupblowfish_secret_desc = 'Tajné heslo (fráze) používané pro šifrování cookies při autentizaci pomocí [kbd]cookie[/kbd]';
+$strSetupBlowfishSecretCharsMsg = 'Tajný klíč by měl obsahovat číslice, písmena [em]A[/em] zvláštní znaky';
+$strSetupBlowfishSecretLengthMsg = 'Tajný klíč je příliš krátký, měl by obsahovat alespoň 8 znaků';
+$strSetupBlowfishSecretMsg = 'Něměl jste nastavený tajný klíč pro šifru blowfish (blowfish_secret) a povolenou autentizaci pomocí cookie, takže byl Váš tajný klíč vygenerován. Klíč bude použit pro zašifrování cookies.';
+$strSetupblowfish_secret_name = 'Klíč pro šifrování cookies (blowfish_secret)';
+$strSetupBrowseMarkerEnable_desc = 'Zvýrazní označené řádky';
+$strSetupBrowseMarkerEnable_name = 'Zvýrazňovač vybraných řádků';
+$strSetupBrowsePointerEnable_desc = 'Zvýrazní řádky, na které ukazuje kurzor myši';
+$strSetupBrowsePointerEnable_name = 'Zvýrazňovač řádků při ukázání';
+$strSetupBZipDump_desc = 'Povolit [a@http://en.wikipedia.org/wiki/Bzip2]bzip2[/a] kompresi pro importování a exportování';
+$strSetupBZipDump_name = 'Komprese bzip2';
+$strSetupBZipDumpWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Komprese a dekomprese bzip2[/a] vyžaduje funkce (%s) které nejsou dostupné na tomto systému.';
+$strSetupCannotLoadConfigMsg = 'Prosím, vytvořte adresář [em]config[/em] zapisovatelný pro web server v kořenovém adresáři phpMyAdmin, jak je popsáno v [a@../Documentation.html#setup_script]dokumentaci[/a]. Jinak budete moci nastavení pouze stáhnout nebo zobrazit.';
+$strSetupCannotLoadConfig = 'Nelze načíst nebo uložit nastavení';
+$strSetupClear = 'Vyčistit';
+$strSetupCompressOnFly_desc = 'Komprimovat exporty pomocí gzip/bzip2 za letu bez velkých nároků na paměť; pokud narazíte na problémy s takto vytvořenými gzip/bzip2 archivy, zakažte tuto funkci.';
+$strSetupCompressOnFly_name = 'Komprimovat za letu';
+$strSetupConfigurationFile = 'Konfigurační soubor';
+$strSetupConfirm_desc = 'Zda se má zobrazovat varování (&quot;Jste si opravdu jistý...&quot;), když hrozí ztráta dat';
+$strSetupConfirm_name = 'Potvrzovat DROP dotazy';
+$strSetupDefaultCharset_desc = 'Výchozí znaková sada používaná pro převody';
+$strSetupDefaultCharset_name = 'Výchozí znaková sada';
+$strSetupDefaultLanguage = 'Výchozí jazyk';
+$strSetupDefaultServer = 'Výchozí server';
+$strSetupDefaultTabDatabase_desc = 'Panel, který je zobrazen při přístupu k databázi.';
+$strSetupDefaultTabDatabase_name = 'Výchozí panel databáze';
+$strSetupDefaultTabServer_desc = 'Panel, který je zobrazen při přístupu k serveru';
+$strSetupDefaultTabServer_name = 'Výchozí panel serveru';
+$strSetupDefaultTabTable_desc = 'Panel, který je zobrazen při přístupu k tabulce';
+$strSetupDefaultTabTable_name = 'Výchozí panel tabulky';
+$strSetupDirectoryNotice = 'Tato hodnota by měla být důkladně zkontrolována, aby se zajistilo, že tento adresář není dostupný zvenčí, ani není čitelný nebo zapisovatelný pro ostatní uživatele na Vašem serveru.';
+$strSetupDisplayDatabasesList_desc = 'Zobrazit přehled databází jako seznam namísto rozbalovacího menu';
+$strSetupDisplayDatabasesList_name = 'Zabrazit databáze jako seznam';
+$strSetupDisplayServersList_desc = 'Zobrazit přehled serverů jako seznam namísto rozbalovacího menu';
+$strSetupDisplayServersList_name = 'Zobrazit servery jako seznam';
+$strSetupDisplay = 'Zobrazení';
 $strShowAll = 'Zobrazit vše';
 $strShowColor = 'Barevné šipky';
 $strShowDatadictAs = 'Formát datového slovníku';
@@ -1075,68 +1136,6 @@ $strZip = '„zazipováno“';
 
 // To translate:
 
-$strPBXTDataFileGrowSize = 'Data file grow size';  //to translate
-$strPBXTDataFileGrowSizeDesc = 'The grow size of the handle data (.xtd) files.';  //to translate
-$strPBXTDataLogThreshold = 'Data log threshold';  //to translate
-$strPBXTDataLogThresholdDesc = 'The maximum size of a data log file. The default value is 64MB. PBXT can create a maximum of 32000 data logs, which are used by all tables. So the value of this variable can be increased to increase the total amount of data that can be stored in the database.';  //to translate
-$strPBXTGarbageThresholdDesc = 'The percentage of garbage in a data log file before it is compacted. This is a value between 1 and 99. The default is 50.';  //to translate
-$strPBXTGarbageThreshold = 'Garbage threshold';  //to translate
-$strPBXTCheckpointFrequencyDesc = 'The amount of data written to the transaction log before a checkpoint is performed. The default value is 24MB.';  //to translate
-$strPBXTCheckpointFrequency = 'Checkpoint frequency';  //to translate
-$strPBXTIndexCacheSizeDesc = 'This is the amount of memory allocated to the index cache. Default value is 32MB. The memory allocated here is used only for caching index pages.';  //to translate
-$strPBXTLogBufferSizeDesc = 'The size of the buffer used when writing a data log. The default is 256MB. The engine allocates one buffer per thread, but only if the thread is required to write a data log.';  //to translate
-$strPBXTLogBufferSize = 'Log buffer size';  //to translate
-$strPBXTLogCacheSizeDesc = 'The amount of memory allocated to the transaction log cache used to cache on transaction log data. The default is 16MB.';  //to translate
-$strPBXTLogFileCountDesc = 'This is the number of transaction log files (pbxt/system/xlog*.xt) the system will maintain. If the number of logs exceeds this value then old logs will be deleted, otherwise they are renamed and given the next highest number.';  //to translate
-$strPBXTLogFileCount = 'Log file count';  //to translate
-$strPBXTLogFileThresholdDesc = 'The size of a transaction log before rollover, and a new log is created. The default value is 16MB.';  //to translate
-$strPBXTRecordCacheSizeDesc = 'This is the amount of memory allocated to the record cache used to cache table data. The default value is 32MB. This memory is used to cache changes to the handle data (.xtd) and row pointer (.xtr) files.';  //to translate
-$strPBXTRowFileGrowSizeDesc = 'The grow size of the row pointer (.xtr) files.';  //to translate
-$strPBXTRowFileGrowSize = 'Row file grow size';  //to translate
-$strPBXTTransactionBufferSizeDesc = 'The size of the global transaction log buffer (the engine allocates 2 buffers of this size). The default is 1MB.';  //to translate
-$strPBXTTransactionBufferSize = 'Transaction buffer size';  //to translate
-
-$strSetupAllowAnywhereRecoding_name = 'Allow character set conversion';  //to translate
-$strSetupAllowArbitraryServer_desc = 'If enabled user can enter any MySQL server in login form for cookie auth';  //to translate
-$strSetupAllowArbitraryServerMsg = 'This [a@?page=form&amp;formset=features#tab_Security]option[/a] should be disabled as it allows attackers to bruteforce login to any MySQL server. If you feel this is necessary, use [a@?page=form&amp;formset=features#tab_Security]trusted proxies list[/a]. However, IP-based protection may not be reliable if your IP belongs to an ISP where thousands of users, including you, are connected to.';  //to translate
-$strSetupAllowArbitraryServer_name = 'Allow login to any MySQL server';  //to translate
-$strSetupAllowUserDropDatabase_name = 'Show &quot;Drop database&quot; link to normal users';  //to translate
-$strSetupblowfish_secret_desc = 'Secret passphrase used for encrypting cookies in [kbd]cookie[/kbd] authentication';  //to translate
-$strSetupBlowfishSecretCharsMsg = 'Key should contain alphanumerics, letters [em]and[/em] special characters';  //to translate
-$strSetupBlowfishSecretLengthMsg = 'Key is too short, it should have at least 8 characters';  //to translate
-$strSetupBlowfishSecretMsg = 'You didn\'t have blowfish secret set and enabled cookie authentication so the key was generated for you. It is used to encrypt cookies.';  //to translate
-$strSetupblowfish_secret_name = 'Blowfish secret';  //to translate
-$strSetupBrowseMarkerEnable_desc = 'Highlight selected rows';  //to translate
-$strSetupBrowseMarkerEnable_name = 'Row marker';  //to translate
-$strSetupBrowsePointerEnable_desc = 'Highlight row pointed by the mouse cursor';  //to translate
-$strSetupBrowsePointerEnable_name = 'Highlight pointer';  //to translate
-$strSetupBZipDump_desc = 'Enable [a@http://en.wikipedia.org/wiki/Bzip2]bzip2[/a] compression for import and export operations';  //to translate
-$strSetupBZipDump_name = 'Bzip2';  //to translate
-$strSetupBZipDumpWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Bzip2 compression and decompression[/a] requires functions (%s) which are unavailable on this system.';  //to translate
-$strSetupCannotLoadConfig = 'Cannot load or save configuration';  //to translate
-$strSetupCannotLoadConfigMsg = 'Please create web server writable folder [em]config[/em] in phpMyAdmin top level directory as described in [a@../Documentation.html#setup_script]documentation[/a]. Otherwise you will be only able to download or display it.';  //to translate
-$strSetupClear = 'Clear';  //to translate
-$strSetupCompressOnFly_desc = 'Compress gzip/bzip2 exports on the fly without the need for much memory; if you encounter problems with created gzip/bzip2 files disable this feature';  //to translate
-$strSetupCompressOnFly_name = 'Compress on the fly';  //to translate
-$strSetupConfigurationFile = 'Configuration file';  //to translate
-$strSetupConfirm_desc = 'Whether a warning (&quot;Are your really sure...&quot;) should be displayed when you\'re about to lose data';  //to translate
-$strSetupConfirm_name = 'Confirm DROP queries';  //to translate
-$strSetupDefaultCharset_desc = 'Default character set used for conversions';  //to translate
-$strSetupDefaultCharset_name = 'Default character set';  //to translate
-$strSetupDefaultLanguage = 'Default language';  //to translate
-$strSetupDefaultServer = 'Default server';  //to translate
-$strSetupDefaultTabDatabase_desc = 'Tab that is displayed when entering a database';  //to translate
-$strSetupDefaultTabDatabase_name = 'Default database tab';  //to translate
-$strSetupDefaultTabServer_desc = 'Tab that is displayed when entering a server';  //to translate
-$strSetupDefaultTabServer_name = 'Default server tab';  //to translate
-$strSetupDefaultTabTable_desc = 'Tab that is displayed when entering a table';  //to translate
-$strSetupDefaultTabTable_name = 'Default table tab';  //to translate
-$strSetupDirectoryNotice = 'This value should be double checked to ensure that this directory is neither world accessible nor readable or writable by other users on your server.';  //to translate
-$strSetupDisplayDatabasesList_desc = 'Show database listing as a list instead of a drop down';  //to translate
-$strSetupDisplayDatabasesList_name = 'Display databases as a list';  //to translate
-$strSetupDisplay = 'Display';  //to translate
-$strSetupDisplayServersList_desc = 'Show server listing as a list instead of a drop down';  //to translate
-$strSetupDisplayServersList_name = 'Display servers as a list';  //to translate
 $strSetupDonateLink = 'Donate';  //to translate
 $strSetupDownload = 'Download';  //to translate
 $strSetupEndOfLine = 'End of line';  //to translate
