@@ -31,6 +31,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + rfe #1276463 [search] Search empty/not empty values 
 + rfe #823652 [structure] ENUM values: field size too small 
 - [lang] Persian update, thanks to Goolex - goolex 
+- [lang] Czech update, thanks to Nicky 726.
 
 3.0.2.0 (not yet released)
 - [lang] Italian update, thanks to Luca and fantu
